--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
 # commands to specify testing environments
 language: python
-python:
-  - "3.5"
-  - "3.6"
+matrix:
+  include:
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
+    - python: 3.8-dev
+      dist: xenial
+      sudo: true
+    - python: nightly
+      dist: xenial
+      sudo: true
+  allow_failures:
+    - python: 3.8-dev
+    - python: nightly
 
 # command to install dependencies
 install:
