--- a/meta.yaml
+++ b/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: 'nionswift-experimental'
-  version: '0.4.0'
+  version: '0.5.2'
 
 source:
-  git_rev: 0.4.0
+  git_rev: 0.5.2
   git_url: https://github.com/nion-software/experimental.git
 
 build:
@@ -17,8 +17,8 @@ requirements:
     - python
     - setuptools
   run:
-    - python >=3.5
-    - nionswift
+    - python >=3.6
+    - nionswift >=0.14.0
 
 test:
   imports:
