--- a/meta.yaml
+++ b/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: 'nionswift-experimental'
-  version: '0.6.0'
+  version: '0.7.0'
 
 source:
-  git_rev: 0.6.0
+  git_rev: 0.7.0
   git_url: https://github.com/nion-software/experimental.git
 
 build:
@@ -18,7 +18,7 @@ requirements:
     - setuptools
   run:
     - python >=3.7
-    - nionswift >=0.14.0
+    - nionswift >=0.15.0,<0.16.0
 
 test:
   imports:
