Add new package to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,4 @@ include =
     nionswift_plugin
     nionswift_plugin.nion_experimental_tools
     nionswift_plugin.nion_experimental_4dtools
+    nion.experimental
