--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nionswift-experimental
-version = 0.7.4
+version = 0.7.5
 author = Nion Software
 author_email = swift@nion.com
 description = Experimental tools package for Nion Swift.
@@ -12,12 +12,13 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 
 [options]
 packages = find_namespace:
-python_requires = ~=3.8
+python_requires = >=3.8,<3.11
 install_requires =
-    nionswift>=0.15.0,<0.16.0
+    nionswift>=0.15.0,<0.17.0
 tests_require =
     nionutils
     numpy
