Ensure handlers are subclasses of Declarative.Handler.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = nionswift-experimental
 version = 0.7.6
+# REQUIRES nionui>=0.6.3 FOR HANDLER
 author = Nion Software
 author_email = swift@nion.com
 description = Experimental tools package for Nion Swift.
