--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [metadata]
 name = nionswift-experimental
-version = 0.7.6
-# REQUIRES nionui>=0.6.3 FOR HANDLER
+version = 0.7.7
 author = Nion Software
 author_email = swift@nion.com
 description = Experimental tools package for Nion Swift.
@@ -20,6 +19,7 @@ packages = find_namespace:
 python_requires = >=3.8,<3.11
 install_requires =
     nionswift>=0.15.0,<0.17.0
+    nionui>=0.6.3,<0.7.0
 tests_require =
     nionutils
     numpy
