--- a/meta.yaml
+++ b/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: 'nionswift-experimental'
-  version: '0.7.6'
+  version: '0.7.7'
 
 source:
-  git_rev: 0.7.6
+  git_rev: 0.7.7
   git_url: https://github.com/nion-software/experimental.git
 
 build:
@@ -20,6 +20,7 @@ requirements:
   run:
     - python >=3.8
     - nionswift >=0.15.0,<0.17.0
+    - nionui >=0.6.3,<0.7.0
 
 test:
   imports:
