Add typing to all non-test files.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,10 +38,13 @@ jobs:
         python -m pip install mypy
         python -m pip install flake8
         mypy --version
+    - name: Typing
+      run: |
+        mypy --namespace-packages --ignore-missing-imports --follow-imports=silent --strict --no-warn-redundant-casts --no-warn-unused-ignores --exclude '/test' --exclude '/docs' -p nion.experimental -p nionswift_plugin.drift_correction -p nionswift_plugin.nion_experimental_4dtools -p nionswift_plugin.nion_experimental_tools
     - name: Test
       run: |
-        python -m unittest discover
-        mypy --namespace-packages --ignore-missing-imports --follow-imports=silent --strict --no-warn-redundant-casts --no-warn-unused-ignores --exclude '/test' --exclude '/docs' -p nionswift_plugin.drift_correction
+        python -m unittest discover nionswift_plugin/nion_experimental_tools -v -p '*_test.py'
+        # python -m unittest discover nion -v -p '*_test.py'
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
