--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nionswift-experimental
-version = 0.7.11
+version = 0.7.12
 author = Nion Software
 author_email = swift@nion.com
 description = Experimental tools package for Nion Swift.
@@ -33,6 +33,8 @@ include =
     nionswift_plugin.drift_correction
 
 [options.package_data]
+nion.experimental =
+    py.typed
 nionswift_plugin.drift_correction =
     resources/*.png
     resources/html/*.html
