--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ install_requires =
     nionui>=7.0,<8.0
 tests_require =
     nionutils
-    numpy
+    numpy>=2.0,<3.0
 
 [options.packages.find]
 include =
