--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -73,5 +73,5 @@ jobs:
         conda update -n base --all -y
         conda update --all -y
         conda install conda-build anaconda-client -y
-        conda-build -q -c nion --skip-existing --user nion --token ${{ secrets.anaconda_token }} ..
+        conda build -q --python ${{ matrix.python-version }} -c nion -c conda-forge --override-channels --skip-existing --user nion --token ${{ secrets.anaconda_token }} ..
         popd
