Update build action to use reusable workflow.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,8 +28,10 @@ tests_require =
 include =
     nionswift_plugin
     nionswift_plugin.nion_experimental_tools
+    nionswift_plugin.nion_experimental_tools.test
     nionswift_plugin.nion_experimental_4dtools
     nion.experimental
+    nion.experimental.test
     nionswift_plugin.drift_correction
 
 [options.package_data]
