--- a/meta.yaml
+++ b/meta.yaml
@@ -20,6 +20,7 @@ requirements:
   run:
     - python >=3.11
     - nionswift >=16.15,<17.0
+    - niondata >=15.9,<16.0
     - nionui >=10.0,<11.0
 
 test:
