--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ packages = find_namespace:
 python_requires = >=3.11
 install_requires =
     nionswift >=16.15,<17.0
+    niondata >=15.9,<16.0
     nionui >=10.0,<11.0
 tests_require =
     nionutils >=4.14,<5.0
